added test and sample to makefile

--- a/hw1/Makefile
+++ b/hw1/Makefile
@@ -1,7 +1,13 @@
 %: %.ml
 	ocamlc -o $@ $^
 
+test:
+	echo -e '#use "hw1.ml";;\n#use "hw1test.ml";;' | ocaml
+
+sample:
+	echo -e '#use "hw1.ml";;\n#use "hw1sample.ml";;' | ocaml
+
 clean:
 	rm -f *.cmi *.cmo hw1 hw1test hw1sample
 
-.PHONY: clean
+.PHONY: clean test sample
