added profiling, optimized out one evaluate_derivation

--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -4,10 +4,13 @@
 test:
 	echo -e '#use "hw2.ml";;\n#use "hw2test.ml";;' | ocaml
 
-sample:
-	echo -e '#use "hw2.ml";;\n#use "hw2sample.ml";;' | ocaml
+sample: hw2.mli hw2.ml hw2sample.ml
+	ocamlopt -o $@ $^
+
+sampleProfile: hw2.mli hw2.ml hw2sample.ml
+	ocamlopt -p -o $@ $^
 
 clean:
-	rm -f *.cmi *.cmo hw2 hw2test hw2sample
+	rm -f *.cmi *.cmo *.cmx *.o *.out hw2 hw2test sample sampleProfile
 
-.PHONY: clean test sample
+.PHONY: clean test
