made compile and clean targets

--- a/hw3/Makefile
+++ b/hw3/Makefile
@@ -1,2 +1,10 @@
+compile:
+	javac code/*
+
 jmmplus.jar: code/*
 	jar cf $@ -C code .
+
+clean:
+	find . -name '*.class' -delete
+
+.PHONY: compile clean
