--- a/project/Makefile
+++ b/project/Makefile
@@ -1,13 +1,15 @@
 PROG = python3 server.py
 CLIENT = python3 client.py
 
+startServers: Goloman Hands Holiday Welsh Wilkes
+
+stopServers:
+	killall python3
+
 Goloman Hands Holiday Welsh Wilkes: server.py
 	$(PROG) $@ &
 
 pingGoloman pingHands pingHoliday pingWelsh pingWilkes: client.py
 	$(CLIENT) $(@:ping%=%)
 
-stopServers:
-	killall python3
-
-.PHONY: Goloman Hands Holiday Welsh Wilkes pingGoloman pingHands pingHoliday pingWelsh pingWilkes stopServers
+.PHONY: Goloman Hands Holiday Welsh Wilkes pingGoloman pingHands pingHoliday pingWelsh pingWilkes startServers stopServers
